Fix panel width issues and remove unnecessary margin
- Removed `margin-right` from callout links in `callouts.scss`: No longer necessary after other layout adjustments.
- Modified `right` class width in `base.scss`: Updated to 100% to fix a layout issue, and added media query to restore original width at larger screen sizes.
- Set `html` width to 100% and removed `overflow-x: hidden` in `base.scss`: Ensures proper layout behavior.

--- a/quartz/styles/base.scss
+++ b/quartz/styles/base.scss
@@ -6,8 +6,7 @@
 
 html {
   scroll-behavior: smooth;
-  overflow-x: hidden;
-  width: 100vw;
+  width: 100%;
 }
 body,
 section {
@@ -186,7 +185,10 @@ hr.desktop-only {
       top: 0;
       width: $sidePanelWidth;
       &.right {
-        width: $rightWidth;
+        width: 100%;
+        @media all and (min-width: $marginsBegin) {
+          width: $rightWidth;
+        }
       }
 
       margin-top: $topSpacing;
